# tess-astrometry

./: LICENSE  README.md  README.rst  pyproject.toml  setup.py
src/astrometry/: MovingTargetPixelFile.py  astrometry.py
src/matlab/: check_sector_camera_ccd.m  generate_sky_coords_all_targets.m  paWrapperClass.m
src/tess_astrometry/: MovingTargetPixelFile.py  astrometry.py
