[tool.poetry]
name = "tess-astrometry"
version = "0.1.0"
description = "Tools to measure astrometry of TESS Solar System objects"
authors = ["Jeff Smith <jsmith@seti.org>"]

[tool.poetry.dependencies]
python = "^3.8"
lightkurve = "^2.0.10"
tess-ephem = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dephell.main]  # config for `dephell deps convert`
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

